--- a/Tugas Formulir_182410101001_Dandy Satrio W/MATRIX Cafe.html
+++ b/Tugas Formulir_182410101001_Dandy Satrio W/MATRIX Cafe.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>MATRIX Cafe</title>
+    <title>MATRIX NET</title>
     <link rel="stylesheet" type="text/css" href="style form.css">
   </head>
   <body>
-    <center><h1>MATRIX Cafe</h1></center>
-    <form class="sign-up">
+    <center><h1>MATRIX NET</h1></center>
+    <div class="sign-up"
       <form action="proses.php" method="post">
         <input type="text" name="firstname" placeholder="Nama Depan"/>
         <input type="text" name="lastname" placeholder="Nama Belakang"/>
@@ -28,6 +28,7 @@
         <br><br>
         <button type="submit" name="submit">REGISTER</button>
       </form>
+    </div>
       <marquee width="100%" bgcolor="white" scrollamount="10"><center><b>Dandy Satrio Wibowo - 182410101001 // Dandy Satrio Wibowo - 182410101001 // Dandy Satrio Wibowo - 182410101001 //
       Dandy Satrio Wibowo - 182410101001 // Dandy Satrio Wibowo - 182410101001 // Dandy Satrio Wibowo - 182410101001 // Dandy Satrio Wibowo - 182410101001 // Dandy Satrio Wibowo - 182410101001 // </b></center></marquee>
   </body>
