--- a/article.html
+++ b/article.html
@@ -2,12 +2,17 @@
 <html>
 <head>
 <title>KOTA OSING - The Sunrise of Java</title>
+<link rel="stylesheet" href="article.css">
 </head>
 <body>
-	<div class="header">
-		<img src="header.png" width="1366" height="75">
-		<img src="header-image.png">
-	</div>
+			<div class="headerKiri">
+					<img src="Logo.png" width="240" height="80">
+			</div>
+		  <div class="headerKanan">
+		  		<img src="header-kanan.png" width="50" height="30">
+		  </div>
+			<br>
+			<img src="header-image.png">
 	<br>
 	<div class="sosmed">
 		<center><img src="view.png" width="30" height="30">5,263 kali dilihat</img>
