--- a/article.html
+++ b/article.html
@@ -5,43 +5,51 @@
 <link rel="stylesheet" href="article.css">
 </head>
 <body>
-			<div class="headerKiri">
-					<img src="Logo.png" width="240" height="80">
+			<div class="headerBox">
+				<div class="headerKiri">
+						<img src="Logo.png" width="240" height="80">
+				</div>
+				<div class="headerKanan">
+						<img src="header-kanan.png" width="50" height="30">
+				</div>
 			</div>
-		  <div class="headerKanan">
-		  		<img src="header-kanan.png" width="50" height="30">
-		  </div>
-			<br>
-			<img src="header-image.png">
-	<br>
-	<div class="sosmed">
-		<center><img src="view.png" width="30" height="30">5,263 kali dilihat</img>
-		<img src="love.png" width="30" height="30">4,827 kali disukai</img>
-		<img src="share.png" width="30" height="30">7,936 kali dibagikan</img></center>
+	<div class="imageIjen">
+			<img src="header-image.png" width="1278">
 	</div>
-	<br>
+<br>
+	<div class="sosmed">
+		<img src="view.png" width="30" height="30">    5,263 kali dilihat    </img>
+		<img src="love.png" width="30" height="30">    4,827 kali disukai    </img>
+		<img src="share.png" width="30" height="30">   7,936 kali dibagikan  </img>
+	</div>
 	<div class="artikel">
 		<center><h3>KAWAH IJEN</h3></center>
-		<p>Kawah Ijen adalah salah satu gunung yang masih aktif sampai sekarang. Memiliki ketinggian 2.443 m dari atas permukaan laut, berdinding kaldera setinggi 300-500 m dan telah 4 kali meletus di tahun 1796, 1817, 1913 dan 1936. Ijen merupakan satu komplek gunung berapi yang terdiri dari kawah gunung Ijen dan dataran tingginya. Kawasan ini terletak di tiga kabupaten yaitu Situbondo, Bondowoso dan Banyuwangi. Kawah Ijen merupakan pusat danau kawah terbesar di dunia, yang bisa memproduksi 3 juta meter kubik belerang dan hidrogen klorida dengan luas sekitar 5.466 hektar.. Kawah yang berbahaya ini memiliki keindahan yang sangat luar biasa dengan danau belerang berwarna hijau toska dengan sentuhan dramatis dan elok. Danau Ijen memiliki derajat keasaman nol dan memiliki kedalaman 200 meter. Keasamannya yang sangat kuat dapat melarutkan pakaian dan jari manusia. Bagi mereka yang suka akan petualangan, untuk mencapai Gunung Ijen bisa di akses dari dua arah yaitu, dari utara dan dari selatan. Dari utara, bisa di tempuh melalui Situbondo menuju Sempol (Bondowoso) lewat Wonosari dan dilajutkan ke Paltuding. Jaral Situbondo ke Paltuding sekitar 93 Km dan dapat ditemput sekitar 2,5 jam. Dari arah selatan, bisa dilalui dari Banyuwangi menuju Licin yang berjarak 15 Km. Dari Licin menuju Paltuding berjarak 18 Km dan diteruskan menggunakan Jeep atau mobil berat lainnya sekitar 6 Km sebelum ke Paltuding. Ini dikarenakan jalan yang berkelok dan menanjak.</p>
-		<center><img src="ijen1.jpg" width="359.86" height="196">     <img src="ijen2.jpg" width="359.86" height="196"></center>
+		<p><b>Kawah Ijen adalah salah satu gunung yang masih aktif sampai sekarang. Memiliki ketinggian 2.443 m dari atas permukaan laut, berdinding kaldera setinggi 300-500 m dan telah 4 kali meletus di tahun 1796, 1817, 1913 dan 1936. Ijen merupakan satu komplek gunung berapi yang terdiri dari kawah gunung Ijen dan dataran tingginya. Kawasan ini terletak di tiga kabupaten yaitu Situbondo, Bondowoso dan Banyuwangi. Kawah Ijen merupakan pusat danau kawah terbesar di dunia, yang bisa memproduksi 3 juta meter kubik belerang dan hidrogen klorida dengan luas sekitar 5.466 hektar. Kawah yang berbahaya ini memiliki keindahan yang sangat luar biasa dengan danau belerang berwarna hijau toska dengan sentuhan dramatis dan elok. Danau Ijen memiliki derajat keasaman nol dan memiliki kedalaman 200 meter. Keasamannya yang sangat kuat dapat melarutkan pakaian dan jari manusia. Bagi mereka yang suka akan petualangan, untuk mencapai Gunung Ijen bisa di akses dari dua arah yaitu, dari utara dan dari selatan. Dari utara, bisa di tempuh melalui Situbondo menuju Sempol (Bondowoso) lewat Wonosari dan dilajutkan ke Paltuding. Jaral Situbondo ke Paltuding sekitar 93 Km dan dapat ditemput sekitar 2,5 jam. Dari arah selatan, bisa dilalui dari Banyuwangi menuju Licin yang berjarak 15 Km. Dari Licin menuju Paltuding berjarak 18 Km dan diteruskan menggunakan Jeep atau mobil berat lainnya sekitar 6 Km sebelum ke Paltuding. Ini dikarenakan jalan yang berkelok dan menanjak.</b></p>
+	</div>
+	<br>
+	<div class="gambarIjen">
+		<img src="ijen1.jpg" width="359.86" height="196">
+	</div>
+	<div class="gambarIjen1">
+		<img src="ijen2.jpg" width="359.86" height="196">
 	</div>
 	<br>
 	<center><img src="garis.png"></img></center>
 	<br>
-	<br>
 	<center><h4>Disarankan untuk Anda</h4></center>
-	<br>
-	<div class="suggest">
-		<center>
+	<div class="saran1">
 			<img src="Suggest 1.png" width="359.86" height="196"></img>
+	</div>
+	<div class="saran2">
 			<img src="Suggest 2.png" width="359.86" height="196"></img>
-			<img src="Suggest 3.png" width="359.86" height="196"></img>
-		</center>
+	</div>
+	<div class="saran3">
+		<img src="Suggest 3.png" width="359.86" height="196"></img>
 	</div>
 	<br>
 	<br>
-	<br>
-	<img src="footer-top.png" width="1366" height="45">
-	<img src="footer-bottom.png" width="1366" height="80"></img>
+	<div class="footertop">
+		<img src="footer-top.png" width="1366" height="45">
+	</div>
 </body>
 </html>
