--- a/index.html
+++ b/index.html
@@ -7,99 +7,43 @@
   </head>
   <body>
     <div class="header">
-      <div class="headerKiri">
-        <img src="Index gambar dan css/Kota Osing-white.png" widh="280" height="80">
-        <div class="headerKanan">
-          <img src="Index gambar dan css/Untitled-2.png" widh="30" height="30">
-        </div>
-      </div>
+      <img class="headerKiri" src="Index gambar dan css/Kota Osing-white.png">
+      <img class="headerKanan" src="Index gambar dan css/Untitled-2.png">
     </div>
-
-
-    </div>
-    <br><br><br><br><br><br>
 
     <div class="judul">
-      The Sunrise of Java<br><br><br>
+      <p class="sunrise">The Sunrise of Java</p>
+      <p class="explore">EXPLORE THE AMAZING CITY</p>
+      <p class="letstart"> Let's Start </p>
+      <p class="wisata"> Dapatkan Pengalaman Terbaik </p>
     </div>
 
-    <div class="explore">
-      EXPLORE THE AMAZING CITY<br><br><br><br><br><br><br>
-    </div>
 
-    <div class="letstart">
-      <!-- <tr>
-          <center><td><input type="submit" name="selesai" value="Let's Start!"></td></center>
-      </tr><br><br><br><br> -->
-  <p> Let's Start </p>
-    </div>
+<!-- 30PX = 180% ; 10PX = 60% -->
 
-    <div class="wisata">
-      Dapatkan Pengalaman Terbaik
-    </div> <br>
-
-    <div class="baluran">
-      <img src="Index gambar dan css/Baluran.jpg" width="300" height="300">
-        <div class="textbaluran">
-          Taman Nasional Baluran
-        </div>
-    </div>
-    <div class="bangsring">
-      <img src="Index gambar dan css/Bangsring.jpg" width="300" height="300">
-        <div class="textbangsring">
-          Bangsring Under Water
-        </div>
-    </div>
-    <div class="ijen">
-      <img src="Index gambar dan css/Ijen.jpg" width="300" height="300">
-        <div class="textijen">
-          Kawah Ijen
-        </div>
-    </div>
-
-    <div class="pulaumerah">
-      <img src="Index gambar dan css/Pulau Merah.jpg" width="300" height="300"><br><br>
-        <div class="textpulaumerah">
-          Pulau Merah
-        </div>
-    </div>
-
-    <div class="sadengan">
-      <img src="Index gambar dan css/Sadengan.jpg" width="300" height="300">
-        <div class="textsadengan">
-          Sadengan
-        </div>
-    </div>
-
-    <div class="tabuhan">
-      <img src="Index gambar dan css/Tabuhan.jpg" width="300" height="300">
-        <div class="texttabuhan">
-          Tabuhan
-        </div>
-    </div>
-
-    <div class="watudodol">
-      <img src="Index gambar dan css/Watu Dodol.jpg" width="300" height="300">
-        <div class="textwatudodol">
-          Watu Dodol
-        </div>
-    </div>
-
-    <div class="plengkung">
-      <img src="Index gambar dan css/G-land.jpeg" width="300" height="300">
-        <div class="textplengkung">
-          Pulau Plengkung
-        </div>
-    </div>
-
+    <div class="gambarwisata">
+      <img class="baluran" src="Index gambar dan css/Baluran.jpg" width="300" height="300">
+      <p class="textbaluran">Taman Nasional Baluran</p>
+      <img class="bangsring" src="Index gambar dan css/Bangsring.jpg" width="300" height="300">
+      <p class="textbangsring">Bangsring Under Water </p>
+      <img class="ijen" src="Index gambar dan css/Ijen.jpg" width="300" height="300">
+      <p class="textijen">Kawah Ijen</p>
+      <img class="pulaumerah" src="Index gambar dan css/Pulau Merah.jpg" width="300" height="300">
+      <p class="textpulaumerah">  Pulau Merah</p>
+      <img  class="sadengan" src="Index gambar dan css/Sadengan.jpg" width="300" height="300">
+      <p class="textsadengan"> Sadengan </p>
+      <img class="tabuhan" src="Index gambar dan css/Tabuhan.jpg" width="300" height="300">
+      <p class="texttabuhan">Tabuhan</p>
+      <img class="watudodol" src="Index gambar dan css/Watu Dodol.jpg" width="300" height="300">
+      <p class="textwatudodol">Watu Dodol</p>
+      <img class="plengkung" src="Index gambar dan css/G-land.jpeg" width="300" height="300">
+      <p class="textplengkung">Pulau Plengkung</p>
 
 
     <div class="boxperjalanan">
-        <img src="Index gambar dan css/car.png" width="120" height="150">
-        <div class="textperjalanan">
-          <h4>Perjalanan</h4>
-          <p>Sangat mudah untuk mencapai tempat wisata</p>
-        </div>
+        <img class="gambar1" src="Index gambar dan css/car.png" width="120" height="150">
+        <h4 class="gambar1">Perjalanan</h4>
+        <p class="gambar1">Sangat mudah untuk mencapai tempat wisata</p>
     </div>
 
     <div class="boxakomodasi">
@@ -157,7 +101,7 @@
     </div>
 
     <div class="boxwisata">
-        <img src="Index gambar dan css/Blog 4.jpg" width="285" height="230">
+        <img src="Index gambar dan css/Blog 4.jpg">
         <div class="textwisata">
           <h4>8 Tempat Wisata Banyuwangi Paling Hits</h4>
           <p>11 September 2019</p>
@@ -171,15 +115,97 @@
         <p>Klik berlangganan untuk mendapatkan berita terbaru dari kami</p>
       </div>
         <div class="boxlangganan">
-
-
         </div>
     </div>
 
     <div class="boxabu">
+      <img src="Index gambar dan css/Udeng.png">
+      <div class="fb">
+        <img src="Index gambar dan css/facebook-logo.png">
+      </div>
+      <div class="twitter">
+        <img src="Index gambar dan css/twitter.png">
+      </div>
+      <div class="instagram">
+        <img src="Index gambar dan css/instagram.png">
+      </div>
 
+      <div class="informasi">
+        <b>Information</b>
+      </div>
+
+      <div class="bawahsatu">
+          <ul type="none">
+            <li>Tentang</li>
+            <br>
+            <li>Layanan</li>
+            <br>
+            <li>Syarat dan Ketentuan</li>
+            <br>
+            <li>Privasi dan Kebijakan</li>
+          </ul>
+      </div>
+
+      <div class="customer">
+        <b>Customer Support</b>
+      </div>
+
+      <div class="bawahdua">
+          <ul type="none">
+            <li>FAQ</li>
+            <br>
+            <li>Hubungi Kami</li>
+            <br>
+          </ul>
+      </div>
+
+      <div class="question">
+        <b>Have A Question?</b>
+      </div>
+
+      <div class="bawahtiga">
+          <ul type="none">
+            <li>Jalan Argopuro V no.183,</li>
+            <li>Banyuwangi, Jawa Timur,</li>
+            <li>Indonesia</li>
+            <br>
+            <li>+62 812 3456 7890</li>
+            <br>
+            <li>info@kotaosing.com</li>
+            <br>
+          </ul>
+      </div>
+
+      <div class="gambar">
+        <ul type="none">
+          <li> <img src="Index gambar dan css/Location.png"> </li> <br>
+          <li> <img src="Index gambar dan css/Phone.png"> </li>
+          <li> <img src="Index gambar dan css/Gmail.png" > </li>
+        </ul>
+      </div>
+
+
+    <div class="boxgaris">
     </div>
+
+
+
 
 
   </body>
 </html>
+
+<!-- @font-face {
+  font-family: "Raleway1";
+  src: url("Raleway-SemiBold.ttf")
+}
+
+@font-face {
+  font-family: "Raleway2";
+  src: url("Raleway-Light.ttf")
+}
+
+@font-face {
+  font-family: "Raleway3";
+  src: url("Raleway-Regular.ttf")
+} -->
