--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Kota Osing</title>
     <link rel="stylesheet" href="Index gambar dan css/index.css">
   </head>
   <body>
+    <img class="background" src="Index gambar dan css/Background.jpg" alt="">
     <div class="header">
       <img class="headerKiri" src="Index gambar dan css/Kota Osing-white.png">
       <img class="headerKanan" src="Index gambar dan css/Untitled-2.png">
@@ -14,14 +15,14 @@
     <div class="judul">
       <p class="sunrise">The Sunrise of Java</p>
       <p class="explore">EXPLORE THE AMAZING CITY</p>
-      <p class="letstart"> Let's Start </p>
-      <p class="wisata"> Dapatkan Pengalaman Terbaik </p>
+      <a href=".gambarwisata"><p class="letstart"> Let's Start </p></a>
     </div>
 
 
 <!-- 30PX = 180% ; 10PX = 60% -->
 
     <div class="gambarwisata">
+      <p class="wisata"> Dapatkan Pengalaman Terbaik </p>
       <img class="baluran" src="Index gambar dan css/Baluran.jpg" width="300" height="300">
       <p class="textbaluran">Taman Nasional Baluran</p>
       <img class="bangsring" src="Index gambar dan css/Bangsring.jpg" width="300" height="300">
@@ -36,7 +37,7 @@
       <p class="texttabuhan">Tabuhan</p>
       <img class="watudodol" src="Index gambar dan css/Watu Dodol.jpg" width="300" height="300">
       <p class="textwatudodol">Watu Dodol</p>
-      <img class="plengkung" src="Index gambar dan css/G-land.jpeg" width="300" height="300">
+      <img class="plengkung" src="Index gambar dan css/Plengkungombak.jpg" width="300" height="300">
       <p class="textplengkung">Pulau Plengkung</p>
 
 
@@ -47,27 +48,21 @@
     </div>
 
     <div class="boxakomodasi">
-        <img src="Index gambar dan css/bed.png" width="120" height="150">
-        <div class="textakomodasi">
-          <h4>Akomodasi</h4>
-          <p>Terdapat banyak pilihan untuk memilih penginapan yang sesuai dengan kenyamanan</p>
-        </div>
+        <img class="gambar2" src="Index gambar dan css/bed.png" width="120" height="150">
+        <h4 class="gambar2">Akomodasi</h4>
+        <p class="gambar2">Terdapat banyak pilihan untuk memilih penginapan yang sesuai dengan kenyamanan</p>
     </div>
 
     <div class="boxkebudayaan">
-        <img src="Index gambar dan css/Dance.png" width="120" height="150">
-        <div class="textkebudayaan">
-          <h4>Kebudayaan</h4>
-          <p>Terdapat berbagai macam suku yang tinggal di Banyuwangi</p>
-        </div>
+        <img class="gambar3" src="Index gambar dan css/Dance.png" width="120" height="150">
+        <h4 class="gambar3">Kebudayaan</h4>
+        <p class="gambar3">Terdapat berbagai macam suku yang tinggal di Banyuwangi</p>
     </div>
 
     <div class="boxbiaya">
-        <img src="Index gambar dan css/money.png" width="120" height="150">
-        <div class="textbiaya">
-          <h4>Biaya</h4>
-          <p>Biaya untuk masuk ke tempat wisata sangat terjangkau</p>
-        </div>
+        <img class="gambar4" src="Index gambar dan css/money.png" width="120" height="150">
+        <h4 class="gambar4">Biaya</h4>
+          <p class="gambar4">Biaya untuk masuk ke tempat wisata sangat terjangkau</p>
     </div>
 
 
@@ -184,28 +179,11 @@
         </ul>
       </div>
 
-
+      <a href="instagram.com" title="Daftar"><p class="daftar">Daftar</p></a>
+      <a href="aa" title="Masuk"><p class="masuk">Masuk</p></a>
     <div class="boxgaris">
     </div>
 
 
-
-
-
   </body>
 </html>
-
-<!-- @font-face {
-  font-family: "Raleway1";
-  src: url("Raleway-SemiBold.ttf")
-}
-
-@font-face {
-  font-family: "Raleway2";
-  src: url("Raleway-Light.ttf")
-}
-
-@font-face {
-  font-family: "Raleway3";
-  src: url("Raleway-Regular.ttf")
-} -->
