--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
     <div class="judul">
       <p class="sunrise">The Sunrise of Java</p>
       <p class="explore">EXPLORE THE AMAZING CITY</p>
-      <a href=".gambarwisata"><p class="letstart"> Let's Start </p></a>
+      <a href="#gambarwisata"><p class="letstart"> Let's Start </p></a>
     </div>
 
 
 <!-- 30PX = 180% ; 10PX = 60% -->
 
-    <div class="gambarwisata">
+    <div id="gambarwisata">
       <p class="wisata"> Dapatkan Pengalaman Terbaik </p>
       <img class="baluran" src="Index gambar dan css/Baluran.jpg" width="300" height="300">
       <p class="textbaluran">Taman Nasional Baluran</p>
@@ -179,8 +179,8 @@
         </ul>
       </div>
 
-      <a href="instagram.com" title="Daftar"><p class="daftar">Daftar</p></a>
-      <a href="aa" title="Masuk"><p class="masuk">Masuk</p></a>
+      <a href="register.html" title="Daftar"><p class="daftar">Daftar</p></a>
+      <a href="login.html" title="Masuk"><p class="masuk">Masuk</p></a>
     <div class="boxgaris">
     </div>
 
