--- a/article.html
+++ b/article.html
@@ -2,54 +2,58 @@
 <html>
 <head>
 <title>KOTA OSING - The Sunrise of Java</title>
-<link rel="stylesheet" href="article.css">
+<link rel="stylesheet" href="Index gambar dan css/article.css">
 </head>
 <body>
-			<div class="headerBox">
-				<div class="headerKiri">
-						<img src="Logo.png" width="240" height="80">
-				</div>
-				<div class="headerKanan">
-						<img src="header-kanan.png" width="50" height="30">
-				</div>
-			</div>
-	<div class="imageIjen">
-			<img src="header-image.png" width="1278">
+	<div class="headerBox">
+				<img class="headerKiri" src="Index gambar dan css/Logo.png">
+					<img class="headerKanan" src="Index gambar dan css/header-kanan.png">
+	</div>
+	<div class="headerGambar">
+		<img class="headerGambar" src="Index gambar dan css/header-image.png">
 	</div>
 <br>
-	<div class="sosmed">
-		<img src="view.png" width="30" height="30">    5,263 kali dilihat    </img>
-		<img src="love.png" width="30" height="30">    4,827 kali disukai    </img>
-		<img src="share.png" width="30" height="30">   7,936 kali dibagikan  </img>
+<div class="sosmed">
+			<img class="view" src="Index gambar dan css/view.png">
+			<img class="love" src="Index gambar dan css/love.png">
+			<img class="share" src="Index gambar dan css/share.png">
+			<p class="tulisanview">5,263 kali dilihat</p>
+			<p class="tulisanlove">4,827 kali disukai</p>
+			<p class="tulisanshare">7,936 kali dibagikan</p>
+</div>
+<div class="artikel">
+	<h3 class="judulartikel"><b>KAWAH IJEN</b></h3>
+	<p><b>Kawah Ijen adalah salah satu gunung yang masih aktif sampai sekarang. Memiliki ketinggian 2.443 m dari atas permukaan laut, berdinding kaldera setinggi 300-500 m dan telah 4 kali meletus di tahun 1796, 1817, 1913 dan 1936. Ijen merupakan satu komplek gunung berapi yang terdiri dari kawah gunung Ijen dan dataran tingginya. Kawasan ini terletak di tiga kabupaten yaitu Situbondo, Bondowoso dan Banyuwangi. Kawah Ijen merupakan pusat danau kawah terbesar di dunia, yang bisa memproduksi 3 juta meter kubik belerang dan hidrogen klorida dengan luas sekitar 5.466 hektar. Kawah yang berbahaya ini memiliki keindahan yang sangat luar biasa dengan danau belerang berwarna hijau toska dengan sentuhan dramatis dan elok. Danau Ijen memiliki derajat keasaman nol dan memiliki kedalaman 200 meter. Keasamannya yang sangat kuat dapat melarutkan pakaian dan jari manusia. Bagi mereka yang suka akan petualangan, untuk mencapai Gunung Ijen bisa di akses dari dua arah yaitu, dari utara dan dari selatan. <br> Dari utara, bisa di tempuh melalui Situbondo menuju Sempol (Bondowoso) lewat Wonosari dan dilajutkan ke Paltuding. Jaral Situbondo ke Paltuding sekitar 93 Km dan dapat ditemput sekitar 2,5 jam. Dari arah selatan, bisa dilalui dari Banyuwangi menuju Licin yang berjarak 15 Km. Dari Licin menuju Paltuding berjarak 18 Km dan diteruskan menggunakan Jeep atau mobil berat lainnya sekitar 6 Km sebelum ke Paltuding. Ini dikarenakan jalan yang berkelok dan menanjak.</b></p>
+</div>
+
+<div class="gambarIjen">
+	<img class="ijen1"src="Index gambar dan css/ijen1.jpg" >
+	<img class="ijen2"src="Index gambar dan css/ijen2.jpg">
+</div>
+	<center><img class="garis" src="Index gambar dan css/garis.png"></center>
+	<h4 class="disarankan">Disarankan untuk Anda</h4>
+	<div class="saran">
+		<img class="saran1" src="Index gambar dan css/Suggest 1.png"></img>
+				<p class="textsaran1">4 Hal di Banyuwangi yang Membuat Liburanmu Tidak Terlupakan</p>
+					<img class="saran2" src="Index gambar dan css/Suggest 2.png"></img>
+				<p class="textsaran2">Telemung: Tempat Di mana Warisan ada di Banyuwangi</p>
+			<img class="saran3" src="Index gambar dan css/Suggest 3.png"></img>
+		<p class="textsaran3">7 Pantai Tersembunyi di Banyuwangi yang Akan Membuatmu Berkesan</p>
 	</div>
-	<div class="artikel">
-		<center><h3>KAWAH IJEN</h3></center>
-		<p><b>Kawah Ijen adalah salah satu gunung yang masih aktif sampai sekarang. Memiliki ketinggian 2.443 m dari atas permukaan laut, berdinding kaldera setinggi 300-500 m dan telah 4 kali meletus di tahun 1796, 1817, 1913 dan 1936. Ijen merupakan satu komplek gunung berapi yang terdiri dari kawah gunung Ijen dan dataran tingginya. Kawasan ini terletak di tiga kabupaten yaitu Situbondo, Bondowoso dan Banyuwangi. Kawah Ijen merupakan pusat danau kawah terbesar di dunia, yang bisa memproduksi 3 juta meter kubik belerang dan hidrogen klorida dengan luas sekitar 5.466 hektar. Kawah yang berbahaya ini memiliki keindahan yang sangat luar biasa dengan danau belerang berwarna hijau toska dengan sentuhan dramatis dan elok. Danau Ijen memiliki derajat keasaman nol dan memiliki kedalaman 200 meter. Keasamannya yang sangat kuat dapat melarutkan pakaian dan jari manusia. Bagi mereka yang suka akan petualangan, untuk mencapai Gunung Ijen bisa di akses dari dua arah yaitu, dari utara dan dari selatan. Dari utara, bisa di tempuh melalui Situbondo menuju Sempol (Bondowoso) lewat Wonosari dan dilajutkan ke Paltuding. Jaral Situbondo ke Paltuding sekitar 93 Km dan dapat ditemput sekitar 2,5 jam. Dari arah selatan, bisa dilalui dari Banyuwangi menuju Licin yang berjarak 15 Km. Dari Licin menuju Paltuding berjarak 18 Km dan diteruskan menggunakan Jeep atau mobil berat lainnya sekitar 6 Km sebelum ke Paltuding. Ini dikarenakan jalan yang berkelok dan menanjak.</b></p>
-	</div>
-	<br>
-	<div class="gambarIjen">
-		<img src="ijen1.jpg" width="359.86" height="196">
-	</div>
-	<div class="gambarIjen1">
-		<img src="ijen2.jpg" width="359.86" height="196">
-	</div>
-	<br>
-	<center><img src="garis.png"></img></center>
-	<br>
-	<center><h4>Disarankan untuk Anda</h4></center>
-	<div class="saran1">
-			<img src="Suggest 1.png" width="359.86" height="196"></img>
-	</div>
-	<div class="saran2">
-			<img src="Suggest 2.png" width="359.86" height="196"></img>
-	</div>
-	<div class="saran3">
-		<img src="Suggest 3.png" width="359.86" height="196"></img>
-	</div>
-	<br>
-	<br>
+	<a href="tambahwisata.html"><input class="tambahwisata"type="button"name=""value="+WISATA"></a>
 	<div class="footertop">
-		<img src="footer-top.png" width="1366" height="45">
+		<img class="footer"src="Index gambar dan css/footer-top.png" width="1280" height="60">
+			<div class="footerkiri">
+				<p class="syaratdanketentuan">Syarat dan Ketentuan |</p>
+						<p class="privasi">	Privasi dan Kebijakan |</p>
+						<p class="hubungikami">	Hubungi Kami |</p>
+				<p class="faq">FAQ</p>
+			</div>
+			<div class="footerkanan">
+					<a href="https://www.facebook.com/" target="_blank" rel="nofollow" title="Facebook"><img class="facebook" src="Index gambar dan css/Group 26.png" width="30" height="30"></a>
+						<a href="https://twitter.com/" target="_blank" rel="nofollow" title="Twitter"><img class="twitter" src="Index gambar dan css/Group 27.png" width="30" height="30"></a>
+					<a href="https://instagram.com/" target="_blank" rel="nofollow" title="Instagram"><img class="instagram" src="Index gambar dan css/Group 28.png" width="30" height="30"></a>
+			</div>
 	</div>
 </body>
 </html>
