--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <p class="textbaluran">Taman Nasional Baluran</p>
       <img class="bangsring" src="Index gambar dan css/Bangsring.jpg" width="300" height="300">
       <p class="textbangsring">Bangsring Under Water </p>
-      <img class="ijen" src="Index gambar dan css/Ijen.jpg" width="300" height="300">
+      <a href="article.html"><img class="ijen" src="Index gambar dan css/Ijen.jpg" width="300" height="300"></a>
       <p class="textijen">Kawah Ijen</p>
       <img class="pulaumerah" src="Index gambar dan css/Pulau Merah.jpg" width="300" height="300">
       <p class="textpulaumerah">  Pulau Merah</p>
