--- a/tambahwisata.html
+++ b/tambahwisata.html
@@ -8,7 +8,7 @@
   <body>
     <style media="screen">
       body{
-        background-image:url("register-bg.jpg");
+        background-image:url("Index gambar dan css/register-bg.jpg");
         background-size:cover;
         background-repeat:no-repeat;
         background-attachment: fixed;
