--- a/register.html
+++ b/register.html
@@ -7,7 +7,7 @@
   <body>
     <center><h1>KOTA OSING</h1></center>
     <div class="register"
-      <form action="" method="post" name="register" onsubmit="validasi()">
+      <form action="" method="post" name="register">
         <input type="text" id="firstname" name="firstname" placeholder="Nama Depan"  required autocomplete="off"/>
         <input type="text" id="lastname" name="lastname" placeholder="Nama Belakang"  required autocomplete="off"/>
         <br><br>
@@ -19,12 +19,19 @@
         <br><br>
         <input type="email" id="email" name="email" placeholder="Alamat Email"  required autocomplete="off">
         <br><br>
-        <input type="password" id="password" name="passowrd" placeholder="Password"  required autocomplete="off">
+        <input type="password" id="password" name="passowrd" placeholder="Password" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" required autocomplete="off">
         <input type="checkbox" name="ingatsaya">Ingat Saya
         <div class="registlogin">Sudah punya akun? <a href="login.html">Masuk</a></diV>
         <br>
         <button type="submit" name="submit">DAFTAR</button>
       </form>
     </div>
+    <ol type="none" id="validation">
+      <li id="letter" class="invalid">Huruf kecil</li>
+      <li id="capital" class="invalid">Huruf besar</li>
+      <li id="number" class="invalid">Angka</li>
+      <li id="length" class="invalid">8 karakter</li>
+    </ul>
   </body>
+  <script src="Index gambar dan css/register.js"></script>
 </html>
