--- a/index.html
+++ b/index.html
@@ -18,9 +18,6 @@
       <a href="#gambarwisata"><p class="letstart"> Let's Start </p></a>
     </div>
 
-
-<!-- 30PX = 180% ; 10PX = 60% -->
-
     <div id="gambarwisata">
       <p class="wisata"> Dapatkan Pengalaman Terbaik </p>
       <img class="baluran" src="Index gambar dan css/Baluran.jpg" width="300" height="300">
@@ -125,39 +122,40 @@
         <img src="Index gambar dan css/instagram.png">
       </div>
 
-      <div class="informasi">
-        <b>Information</b>
-      </div>
+      <a href="register.html" title="Daftar"><p class="daftar">Daftar</p></a>
+      <a href="login.html" title="Masuk"><p class="masuk">Masuk</p></a>
 
+      <div class="boxgaris"></div>
+
+      <p class="bawah1">Kota Osing</p>
       <div class="bawahsatu">
           <ul type="none">
-            <li>Tentang</li>
-            <br>
-            <li>Layanan</li>
-            <br>
-            <li>Syarat dan Ketentuan</li>
-            <br>
-            <li>Privasi dan Kebijakan</li>
+            <li>Merupakan web yang</li>
+            <li>berisi tentang wisata yang</li>
+            <li>berada di kota Banyuwangi</li>
           </ul>
       </div>
 
-      <div class="customer">
-        <b>Customer Support</b>
-      </div>
-
+      <p class="bawah2">Information</p>
       <div class="bawahdua">
           <ul type="none">
-            <li>FAQ</li>
+            <li>Dandy Satrio Wibowo</li>
             <br>
-            <li>Hubungi Kami</li>
+            <li>Fitria Rahmawati</li>
+            <br>
+            <li>Dewi Chantika Maya</li>
             <br>
           </ul>
       </div>
 
-      <div class="question">
-        <b>Have A Question?</b>
+      <p class="bawah3">Have a Question?</p>
+      <div class="gambarbawah3">
+        <ul type="none">
+          <li> <img src="Index gambar dan css/Location.png"> </li> <br>
+          <li> <img src="Index gambar dan css/Phone.png"> </li>
+          <li> <img src="Index gambar dan css/Gmail.png" > </li>
+        </ul>
       </div>
-
       <div class="bawahtiga">
           <ul type="none">
             <li>Jalan Argopuro V no.183,</li>
@@ -170,20 +168,6 @@
             <br>
           </ul>
       </div>
-
-      <div class="gambar">
-        <ul type="none">
-          <li> <img src="Index gambar dan css/Location.png"> </li> <br>
-          <li> <img src="Index gambar dan css/Phone.png"> </li>
-          <li> <img src="Index gambar dan css/Gmail.png" > </li>
-        </ul>
-      </div>
-
-      <a href="register.html" title="Daftar"><p class="daftar">Daftar</p></a>
-      <a href="login.html" title="Masuk"><p class="masuk">Masuk</p></a>
-    <div class="boxgaris">
-    </div>
-
 
   </body>
 </html>
