--- a/tambahwisata.html
+++ b/tambahwisata.html
@@ -3,29 +3,29 @@
   <head>
     <meta charset="utf-8">
     <title>KOTA OSING - The Sunrise of Java</title>
-    <link rel="stylesheet" href="Index gambar dan css/article.css">
+    <link rel="stylesheet" href="Index gambar dan css/css.css">
   </head>
   <body>
     <style media="screen">
       body{
-        background-image:url("Index gambar dan css/register-bg.jpg");
+        background-color: #50CCB3;;
         background-size:cover;
         background-repeat:no-repeat;
         background-attachment: fixed;
       }
     </style>
-    <div class="headerBox">
-          <img class="headerKiri" src="Index gambar dan css/Logo.png">
-            <img class="headerKanan" src="Index gambar dan css/header-kanan.png">
+    <div class="headerBox1">
+          <img class="headerKiri" src="Index gambar dan css//Logo.png">
+          <img class="headerKanan" src="Index gambar dan css//header-kanan.png">
     </div>
     <form class="register" align="center">
-      <h3>Tambahkan Wisata</h3>
+      <h3>Tambahkan Artikel Terbaru</h3>
       <div class="formcreate">
         <input type="text" placeholder="Nama Wisata" required><br><br>
         <input type="text" placeholder="Alamat Wisata" required><br><br>
         <input type="file" name="upload_gambar" class="upload_gambar" required><br><br>
         <!-- <input type="text" placeholder="Keterangan Lainnya"><br><br> -->
-        <p class="textarea">Deskripsi Wisata :</p>
+        <p class="textarea">Deskripsi Artikel :</p>
         <textarea name="deskripsi" rows="7" cols=26.5 required></textarea>
           <ul type="none">
             <li><input class= "post-btn" type="submit" name="Simpan" value="SIMPAN"></li>
