--- a/index.html
+++ b/index.html
@@ -7,14 +7,9 @@
   </head>
   <body>
     <img class="background" src="Index gambar dan css/Background.jpg" alt="">
-    <div id="header-menu">
-      <img src="Index gambar dan css/Kota Osing-white.png">
-      <ul>
-        <li><a href="#">KONTAK</a></li>
-        <li><a href="#">BLOG</a></li>
-        <li><a href="#">TENTANG</a></li>
-        <li><a href="#">BERANDA</a></li>
-      </ul>
+    <div class="header">
+      <img class="headerKiri" src="Index gambar dan css/Kota Osing-white.png">
+      <img class="headerKanan" src="Index gambar dan css/Untitled-2.png">
     </div>
 
     <div class="judul">
@@ -118,13 +113,13 @@
     <div class="boxabu">
       <img src="Index gambar dan css/Udeng.png">
       <div class="fb">
-        <img src="Index gambar dan css/facebook-logo.png">
+        <a href="https://twitter.com" title="Facebook"><img src="Index gambar dan css/facebook-logo.png"></a>
       </div>
       <div class="twitter">
-        <img src="Index gambar dan css/twitter.png">
+        <a href="https://facebook.com" title="Twitter"><img src="Index gambar dan css/twitter.png"></a>
       </div>
       <div class="instagram">
-        <img src="Index gambar dan css/instagram.png">
+        <a href="https://facebook.com" title="Instagram"><img src="Index gambar dan css/instagram.png"></a>
       </div>
 
       <a href="register.html" title="Daftar"><p class="daftar">Daftar</p></a>
