--- a/index.html
+++ b/index.html
@@ -7,11 +7,15 @@
   </head>
   <body>
     <img class="background" src="Index gambar dan css/Background.jpg" alt="">
-    <div class="header">
-      <img class="headerKiri" src="Index gambar dan css/Kota Osing-white.png">
-      <img class="headerKanan" src="Index gambar dan css/Untitled-2.png">
-    </div>
-
+      <div id="header-menu">
+        <img src="Index gambar dan css/Kota Osing-white.png">
+        <ul>
+          <li><a href="#">KONTAK</a></li>
+          <li><a href="#">BLOG</a></li>
+          <li><a href="#">TENTANG</a></li>
+          <li><a href="#">BERANDA</a></li>
+        </ul>
+      </div>
     <div class="judul">
       <p class="sunrise">The Sunrise of Java</p>
       <p class="explore">EXPLORE THE AMAZING CITY</p>
