--- a/wisata.html
+++ b/wisata.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>KOTA OSING - The Sunrise of Java</title>
-<link rel="stylesheet" href="Index gambar dan css/css.css">
+<link rel="stylesheet" href="Index gambar dan css/style.css">
 </head>
 <body>
 	<div class="headerBox">
