--- a/wisata.html
+++ b/wisata.html
@@ -6,11 +6,24 @@
 </head>
 <body>
 	<div class="headerBox">
-				<img class="headerKiri" src="Index gambar dan css/Logo.png">
-					<img class="headerKanan" src="Index gambar dan css/header-kanan.png">
+		<img class="headerKiri" src="Index gambar dan css/Logo.png">
+		<ul>
+			<li><a href="#">KONTAK</a></li>
+			<li><a href="#">BLOG</a></li>
+			<li><a href="#">TENTANG</a></li>
+			<li><a href="#">BERANDA</a></li>
+		</ul>
+
 	</div>
 	<div class="headerGambar">
 		<img class="headerGambar" src="Index gambar dan css/header-image.png">
+		<ul>
+			<li><a href="#">KONTAK</a></li>
+			<li><a href="#">BLOG</a></li>
+			<li><a href="#">TENTANG</a></li>
+			<li><a href="#">BERANDA</a></li>
+		</ul>
+
 	</div>
 <br>
 <div class="sosmed">
