--- a/wisata1.html
+++ b/wisata1.html
@@ -5,9 +5,14 @@
 <link rel="stylesheet" href="Index gambar dan css/style.css">
 </head>
 <body>
-	<div class="headerBox">
-				<img class="headerKiri" src="Index gambar dan css/Logo.png">
-					<img class="headerKanan" src="Index gambar dan css/header-kanan.png">
+	<div id="header-menu">
+			<img src="Index gambar dan css/Kota Osing-white.png">
+			<ul>
+				<li><a href="#">KONTAK</a></li>
+				<li><a href="#">BLOG</a></li>
+				<li><a href="#">TENTANG</a></li>
+				<li><a href="#">BERANDA</a></li>
+			</ul>
 	</div>
 	<div class="headerGambar">
 		<img class="headerGambar" src="Index gambar dan css/Baluran.jpg">
