--- a/wisata.html
+++ b/wisata.html
@@ -5,25 +5,17 @@
 <link rel="stylesheet" href="Index gambar dan css/style.css">
 </head>
 <body>
-	<div class="headerBox">
-		<img class="headerKiri" src="Index gambar dan css/Logo.png">
-		<ul>
-			<li><a href="#">KONTAK</a></li>
-			<li><a href="#">BLOG</a></li>
-			<li><a href="#">TENTANG</a></li>
-			<li><a href="#">BERANDA</a></li>
-		</ul>
-
+	<div id="header-menu">
+			<img src="Index gambar dan css/Kota Osing-white.png">
+			<ul>
+				<li><a href="#">KONTAK</a></li>
+				<li><a href="#">BLOG</a></li>
+				<li><a href="#">TENTANG</a></li>
+				<li><a href="#">BERANDA</a></li>
+			</ul>
 	</div>
 	<div class="headerGambar">
 		<img class="headerGambar" src="Index gambar dan css/header-image.png">
-		<ul>
-			<li><a href="#">KONTAK</a></li>
-			<li><a href="#">BLOG</a></li>
-			<li><a href="#">TENTANG</a></li>
-			<li><a href="#">BERANDA</a></li>
-		</ul>
-
 	</div>
 <br>
 <div class="sosmed">
