--- a/Padang-savana.html
+++ b/Padang-savana.html
@@ -2,12 +2,17 @@
 <html>
 <head>
 <title>KOTA OSING - The Sunrise of Java</title>
-<link rel="stylesheet" href="Index gambar dan css/css.css">
+<link rel="stylesheet" href="Index gambar dan css/style.css">
 </head>
 <body>
-	<div class="headerBox">
-		<img class="headerKiri" src="Index gambar dan css/Logo.png">
-			<img class="headerKanan" src="Index gambar dan css/header-kanan.png">
+	<div id="header-menu">
+			<img src="Index gambar dan css/Kota Osing-black.png">
+			<ul>
+				<li><a href="#">KONTAK</a></li>
+				<li><a href="#">BLOG</a></li>
+				<li><a href="#">TENTANG</a></li>
+				<li><a href="#">BERANDA</a></li>
+			</ul>
 	</div>
 	<div class="headerGambar">
 		<img class="headerGambar" src="Index gambar dan css/Sadengan.jpg" width="100" height="150">
