--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
   <body>
     <img class="background" src="Index gambar dan css/Background.jpg" alt="">
     <div id="header-menu">
-        <img src="Index gambar dan css/Kota Osing-white.png">
+        <img id="header-logo" src="Index gambar dan css/Kota Osing-white.png">
         <ul>
-          <li><a href="#">KONTAK</a></li>
-          <li><a href="#">BLOG</a></li>
-          <li><a href="#">TENTANG</a></li>
-          <li><a href="#">BERANDA</a></li>
+          <li><a href="#boxgaris">KONTAK</a></li>
+          <li><a href="#artikel">BLOG</a></li>
+          <li><a href="tentang.html">TENTANG</a></li>
+          <li><a href="#header-logo">BERANDA</a></li>
         </ul>
     </div>
     <div class="judul">
@@ -67,7 +67,7 @@
     </div>
 
 
-    <div class="artikel">
+    <div id="artikel">
       Tips & Artikel
     </div>
 
@@ -117,19 +117,19 @@
     <div class="boxabu">
       <img src="Index gambar dan css/Udeng.png">
       <div class="fb">
-        <a href="https://twitter.com" title="Facebook"><img src="Index gambar dan css/facebook-logo.png"></a>
+        <a href="https://facebook.com" title="Facebook"><img src="Index gambar dan css/facebook-logo.png"></a>
       </div>
       <div class="twitter">
-        <a href="https://facebook.com" title="Twitter"><img src="Index gambar dan css/twitter.png"></a>
+        <a href="https://twitter.com" title="Twitter"><img src="Index gambar dan css/twitter.png"></a>
       </div>
       <div class="instagram">
-        <a href="https://facebook.com" title="Instagram"><img src="Index gambar dan css/instagram.png"></a>
+        <a href="https://instagram.com" title="Instagram"><img src="Index gambar dan css/instagram.png"></a>
       </div>
 
       <a href="register.html" title="Daftar"><p class="daftar">Daftar</p></a>
       <a href="login.html" title="Masuk"><p class="masuk">Masuk</p></a>
 
-      <div class="boxgaris"></div>
+      <div id="boxgaris"></div>
 
       <p class="bawah1">Kota Osing</p>
       <div class="bawahsatu">
