--- a/Watu-Dodol.html
+++ b/Watu-Dodol.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 	<div id="header-menu">
-			<img src="Index gambar dan css/Kota Osing-white.png">
+			<img src="Index gambar dan css/Kota Osing-black.png">
 			<ul>
 				<li><a href="#">KONTAK</a></li>
 				<li><a href="#">BLOG</a></li>
