--- a/Asal-usul-banyuwangi.html
+++ b/Asal-usul-banyuwangi.html
@@ -6,13 +6,14 @@
 </head>
 <body>
 	<div id="header-menu">
-			<img src="Index gambar dan css/Kota Osing-black.png">
+			<img id="header-logo" src="Index gambar dan css/Kota Osing-black.png">
 			<ul>
-				<li><a href="#">KONTAK</a></li>
-				<li><a href="#">BLOG</a></li>
-				<li><a href="#">TENTANG</a></li>
-				<li><a href="#">BERANDA</a></li>
+				<li><a href="index.html#boxgaris">KONTAK</a></li>
+				<li><a href="index.html#artikel">BLOG</a></li>
+				<li><a href="tentang.html">TENTANG</a></li>
+				<li><a href="index.html">BERANDA</a></li>
 			</ul>
+	</div>
 	</div>
 	<div class="headerGambar">
 		<img class="headerBanyuwangi" src="Index gambar dan css/BanyuwangiArtikel.jpg">
