--- a/index.html
+++ b/index.html
@@ -72,12 +72,12 @@
     </div>
 
 
-    <div class="boxasal">
+    <a href="Asal-usul-banyuwangi.html"><div class="boxasal">
         <img src="Index gambar dan css/Blog 1.jpg" width="285" height="230">
         <div class="textasal">
           <h4>Asal-usul Banyuwangi</h4>
           <p>11 September 2019</p>
-        </div>
+        </div></a>
     </div>
 
     <div class="boxtips">
