--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Kota Osing</title>
+    <link rel="icon" type="image/png" href="Index gambar dan css/Udeng-black.png">
     <link rel="stylesheet" href="Index gambar dan css/index.css">
   </head>
   <body>
@@ -24,22 +25,22 @@
 
     <div id="gambarwisata">
       <p class="wisata"> Dapatkan Pengalaman Terbaik </p>
-      <img class="baluran" src="Index gambar dan css/Baluran.jpg" width="300" height="300">
-      <p class="textbaluran">Taman Nasional Baluran</p>
-      <img class="bangsring" src="Index gambar dan css/Bangsring.jpg" width="300" height="300">
-      <p class="textbangsring">Bangsring Under Water </p>
-      <a href="article.html"><img class="ijen" src="Index gambar dan css/Ijen.jpg" width="300" height="300"></a>
-      <p class="textijen">Kawah Ijen</p>
-      <img class="pulaumerah" src="Index gambar dan css/Pulau Merah.jpg" width="300" height="300">
-      <p class="textpulaumerah">  Pulau Merah</p>
-      <img  class="sadengan" src="Index gambar dan css/Sadengan.jpg" width="300" height="300">
-      <p class="textsadengan"> Sadengan </p>
-      <img class="tabuhan" src="Index gambar dan css/Tabuhan.jpg" width="300" height="300">
-      <p class="texttabuhan">Tabuhan</p>
-      <img class="watudodol" src="Index gambar dan css/Watu Dodol.jpg" width="300" height="300">
-      <p class="textwatudodol">Watu Dodol</p>
-      <img class="plengkung" src="Index gambar dan css/Plengkungombak.jpg" width="300" height="300">
-      <p class="textplengkung">Pulau Plengkung</p>
+      <a href="Taman-Baluran.html"><img class="baluran" src="Index gambar dan css/Baluran.jpg" width="300" height="300"></a>
+      <p class="textbaluran">Taman Nasional Baluran</p></a>
+      <a href="Bangsring-Water.html"><img class="bangsring" src="Index gambar dan css/Bangsring.jpg" width="300" height="300">
+      <p class="textbangsring">Bangsring Under Water </p></a>
+      <a href="Kawah-Ijen.html"><img class="ijen" src="Index gambar dan css/Ijen.jpg" width="300" height="300">
+      <p class="textijen">Kawah Ijen</p></a>
+      <a href="Pulau-Merah.html"><img class="pulaumerah" src="Index gambar dan css/Pulau Merah.jpg" width="300" height="300">
+      <p class="textpulaumerah">Pulau Merah</p></a>
+      <a href="Padang-savana.html"><img class="sadengan" src="Index gambar dan css/Sadengan.jpg" width="300" height="300">
+      <p class="textsadengan"> Sadengan </p></a>
+      <a href="Pulau-Tabuhan.html"><img class="tabuhan" src="Index gambar dan css/Tabuhan.jpg" width="300" height="300">
+      <p class="texttabuhan">Tabuhan</p></a>
+      <a href="Watu-Dodol.html"><img class="watudodol" src="Index gambar dan css/Watu Dodol.jpg" width="300" height="300">
+      <p class="textwatudodol">Watu Dodol</p></a>
+      <a href="Pulau-Plengkung.html"><img class="plengkung" src="Index gambar dan css/Plengkungombak.jpg" width="300" height="300">
+      <p class="textplengkung">Pulau Plengkung</p></a>
 
 
     <div class="boxperjalanan">
