--- a/login.html
+++ b/login.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>KOTA OSING</title>
+    <link rel="icon" type="image/png" href="Index gambar dan css/Udeng-black.png">
     <link rel="stylesheet" type="text/css" href="Index gambar dan css/login.css">
   </head>
   <body>
