--- a/tambahwisata.html
+++ b/tambahwisata.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>KOTA OSING - The Sunrise of Java</title>
+    <link rel="icon" type="image/png" href="Index gambar dan css/Udeng-black.png">
     <link rel="stylesheet" href="Index gambar dan css/css.css">
   </head>
   <body>
