--- a/Watu-Dodol.html
+++ b/Watu-Dodol.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <title>KOTA OSING - The Sunrise of Java</title>
+<link rel="icon" type="image/png" href="Index gambar dan css/Udeng-black.png">
 <link rel="stylesheet" href="Index gambar dan css/style.css">
 </head>
 <body>
