--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         </div></a>
     </div>
 
-    <div class="boxtips">
+    <a href="TipsWisata.html"><div class="boxtips">
         <img src="Index gambar dan css/Blog 2.jpg" width="285" height="230">
         <div class="texttips">
           <h4>10 Tips Traveling untuk Mahasiswa</h4>
@@ -89,7 +89,7 @@
         </div>
     </div>
 
-    <div class="boxholiday">
+    <a href="WisataHemat.html"><div class="boxholiday">
         <img src="Index gambar dan css/Blog 3.jpg" width="285" height="230">
         <div class="textholiday">
           <h4>7 Tips Liburan Hemat dan Menyenangkan</h4>
@@ -97,7 +97,7 @@
         </div>
     </div>
 
-    <div class="boxwisata">
+    <a href="WisataHits.html"><div class="boxwisata">
         <img src="Index gambar dan css/Blog 4.jpg">
         <div class="textwisata">
           <h4>8 Tempat Wisata Banyuwangi Paling Hits</h4>
