--- a/login.html
+++ b/login.html
@@ -7,15 +7,15 @@
   </head>
   <body>
     <center><h1>KOTA OSING</h1></center>
-    <div class="login"
-      <form action="" method="post">
-        <input type="email" name="email" placeholder="Alamat Email">
+    <div class=login
+      <form name="login" method="post">
+        <input type="email" name="email" placeholder="Alamat Email" required autocomplete="off">
         <br><br>
-        <input type="password" name="passowrd-login" placeholder="Password">
+        <input type="password" name="passowrd-login" placeholder="Password" required autocomplete="off">
         <input type="checkbox" name="ingatsaya">Ingat Saya
         <div class="regist-login">Belum punya akun? <a href="register.html">Daftar</a></diV>
         <br>
-        <button type="submit" name="submit">MASUK</button>
+        <a href="index.html"><button type="submit" name="submit">MASUK</button></a>
       </form>
     </div>
   </body>
