adding new page

--- a/Pulau-Plengkung.html
+++ b/Pulau-Plengkung.html
@@ -39,11 +39,11 @@
 	<h4 class="disarankan">Disarankan untuk Anda</h4>
 	<div class="saran">
 		<img class="saran1" src="Index gambar dan css/Suggest 1.png"></img>
-				<p class="textsaran1">4 Hal di Banyuwangi yang Membuat Liburanmu Tidak Terlupakan</p>
+				<p class="textsaran1plengkung">4 Hal di Banyuwangi yang Membuat Liburanmu Tidak Terlupakan</p>
 					<img class="saran2" src="Index gambar dan css/Suggest 2.png"></img>
-				<p class="textsaran2">Telemung: Tempat Di mana Warisan ada di Banyuwangi</p>
+				<p class="textsaran2plengkung">Telemung: Tempat Di mana Warisan ada di Banyuwangi</p>
 			<img class="saran3" src="Index gambar dan css/Suggest 3.png"></img>
-		<p class="textsaran3">7 Pantai Tersembunyi di Banyuwangi yang Akan Membuatmu Berkesan</p>
+		<p class="textsaran3plengkung">7 Pantai Tersembunyi di Banyuwangi yang Akan Membuatmu Berkesan</p>
 	</div>
 	<div class="footertop">
 	</div>
