--- a/WisataHemat.html
+++ b/WisataHemat.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <title>KOTA OSING - The Sunrise of Java</title>
+<link rel="icon" type="image/png" href="Index gambar dan css/Udeng-black.png">
 <link rel="stylesheet" href="Index gambar dan css/style.css">
 </head>
 <body>
@@ -42,11 +43,11 @@
 	<h4 class="disarankan">Disarankan untuk Anda</h4>
 	<div class="saran">
 		<img class="saran1" src="Index gambar dan css/Suggest 1.png"></img>
-				<p class="textsaran1artikel">4 Hal di Banyuwangi yang Membuat Liburanmu Tidak Terlupakan</p>
+				<p class="textsaran1Wisatahemat">4 Hal di Banyuwangi yang Membuat Liburanmu Tidak Terlupakan</p>
 					<img class="saran2" src="Index gambar dan css/Suggest 2.png"></img>
-				<p class="textsaran2artikel">Telemung: Tempat Di mana Warisan ada di Banyuwangi</p>
+				<p class="textsaran2Wisatahemat">Telemung: Tempat Di mana Warisan ada di Banyuwangi</p>
 			<img class="saran3" src="Index gambar dan css/Suggest 3.png"></img>
-		<p class="textsaran3artikel">7 Pantai Tersembunyi di Banyuwangi yang Akan Membuatmu Berkesan</p>
+		<p class="textsaran3Wisatahemat">7 Pantai Tersembunyi di Banyuwangi yang Akan Membuatmu Berkesan</p>
 	</div>
 	<a href="tambahwisata.html"><input class="tambahwisata"type="button"name=""value="+ARTIKEL"></a>
 	<div class="footertop">
