--- a/WisataHits.html
+++ b/WisataHits.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <title>KOTA OSING - The Sunrise of Java</title>
+<link rel="icon" type="image/png" href="Index gambar dan css/Udeng-black.png">
 <link rel="stylesheet" href="Index gambar dan css/style.css">
 </head>
 <body>
@@ -37,18 +38,18 @@
    	 <li>Jawatan Benculuk</li>
 		 <p class="TipsWisata">Pohon-pohon trembesi yang tinggi dan rindang di film Lord and The Rings bisa kamu temukan langsung di Banyuwangi, tepatnya di Desa Benculuk, Kecamatan Cluring. Sembari naik sepeda, bersantai dan menghirup udara segar, kamu juga bisa menikmati beberapa aktivitas lainnya seperti arum jeram dan memancing.</p>
      <li>Air Terjun Lider</li>
-     <p>Dikenal sebagai air terjun tertinggi di Banyuwangi dengan ketinggian mencapai 60 meter. Air yang mengalir berasal dari mata air pegunungan sekitar. Air Terjun Lider mampu menghasilkan pantulan pelangi di siang hari. Pemandangan pelangi diduga berasal sinar matahari yang mengenai percikan-percikan air yang mengalir. Kamu bisa bayangkan betapa indahnya air terjun ini pada siang hari.</p>
+     <p class="TipsWisata">Dikenal sebagai air terjun tertinggi di Banyuwangi dengan ketinggian mencapai 60 meter. Air yang mengalir berasal dari mata air pegunungan sekitar. Air Terjun Lider mampu menghasilkan pantulan pelangi di siang hari. Pemandangan pelangi diduga berasal sinar matahari yang mengenai percikan-percikan air yang mengalir. Kamu bisa bayangkan betapa indahnya air terjun ini pada siang hari.</p>
 	</ol>
 </div>
 <center><img class="garis" src="Index gambar dan css/garis.png"></center>
 	<h4 class="disarankan">Disarankan untuk Anda</h4>
 	<div class="saran">
 		<img class="saran1" src="Index gambar dan css/Suggest 1.png"></img>
-				<p class="textsaran1artikel">4 Hal di Banyuwangi yang Membuat Liburanmu Tidak Terlupakan</p>
+				<p class="textsaran1Wisatahits">4 Hal di Banyuwangi yang Membuat Liburanmu Tidak Terlupakan</p>
 					<img class="saran2" src="Index gambar dan css/Suggest 2.png"></img>
-				<p class="textsaran2artikel">Telemung: Tempat Di mana Warisan ada di Banyuwangi</p>
+				<p class="textsaran2Wisatahits">Telemung: Tempat Di mana Warisan ada di Banyuwangi</p>
 			<img class="saran3" src="Index gambar dan css/Suggest 3.png"></img>
-		<p class="textsaran3artikel">7 Pantai Tersembunyi di Banyuwangi yang Akan Membuatmu Berkesan</p>
+		<p class="textsaran3Wisatahits">7 Pantai Tersembunyi di Banyuwangi yang Akan Membuatmu Berkesan</p>
 	</div>
 	<a href="tambahwisata.html"><input class="tambahwisata"type="button"name=""value="+ARTIKEL"></a>
 	<div class="footertop">
