--- a/tambahwisata.html
+++ b/tambahwisata.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>KOTA OSING - The Sunrise of Java</title>
+    <script src="Index gambar dan css/jquery.js">
+    </script>
     <link rel="icon" type="image/png" href="Index gambar dan css/Udeng-black.png">
     <link rel="stylesheet" href="Index gambar dan css/css.css">
   </head>
@@ -33,6 +35,27 @@
             <li><input class= "post-btn" type="reset" name="Batal" value="BATAL"></li>
           </ul>
       </form>
+      <script type="text/javascript">
+               function readURL(input) {
+           if (input.files && input.files[0]) {
+            var reader = new FileReader();
+            reader.onload = function (e) {
+               if(e!=""){
+                 $('#preview').show();
+                 $('#preview').attr('src', e.target.result);
+               }else{
+                 $('#preview').show();
+               }
+            }
+            reader.readAsDataURL(input.files[0]);
+           }
+           }
+
+           $("#gambar_pro").change(function(){
+            readURL(this);
+           });
+         </script>
+
   </body>
   <style>
   </style>
