--- a/index.html
+++ b/index.html
@@ -7,172 +7,114 @@
     <link rel="stylesheet" href="Index gambar dan css/index.css">
   </head>
   <body>
-    <img class="background" src="Index gambar dan css/Background.jpg" alt="">
-    <div id="header-menu">
-        <img id="header-logo" src="Index gambar dan css/Kota Osing-white.png">
-        <ul>
-          <li><a href="#boxgaris">KONTAK</a></li>
-          <li><a href="#artikel">BLOG</a></li>
-          <li><a href="tentang.html">TENTANG</a></li>
-          <li><a href="#header-logo">BERANDA</a></li>
-        </ul>
-    </div>
-    <div class="judul">
-      <p class="sunrise">The Sunrise of Java</p>
-      <p class="explore">EXPLORE THE AMAZING CITY</p>
-      <a href="#gambarwisata"><p class="letstart"> Let's Start </p></a>
-    </div>
+    <!-- navbar -->
+    <div class="topnav">
+        <a href="index.html">KOTA OSING</a>
+        <a style="float:right" href="#">Tentang</a>
+        <a style="float:right" href="#">Daftar</a>
+        <a style="float:right" href="#">Masuk</a>
 
-    <div id="gambarwisata">
-      <p class="wisata"> Dapatkan Pengalaman Terbaik </p>
-      <a href="Taman-Baluran.html"><img class="baluran" src="Index gambar dan css/Baluran.jpg" width="300" height="300"></a>
-      <p class="textbaluran">Taman Nasional Baluran</p></a>
-      <a href="Bangsring-Water.html"><img class="bangsring" src="Index gambar dan css/Bangsring.jpg" width="300" height="300">
-      <p class="textbangsring">Bangsring Under Water </p></a>
-      <a href="Kawah-Ijen.html"><img class="ijen" src="Index gambar dan css/Ijen.jpg" width="300" height="300">
-      <p class="textijen">Kawah Ijen</p></a>
-      <a href="Pulau-Merah.html"><img class="pulaumerah" src="Index gambar dan css/Pulau Merah.jpg" width="300" height="300">
-      <p class="textpulaumerah">Pulau Merah</p></a>
-      <a href="Padang-savana.html"><img class="sadengan" src="Index gambar dan css/Sadengan.jpg" width="300" height="300">
-      <p class="textsadengan"> Sadengan </p></a>
-      <a href="Pulau-Tabuhan.html"><img class="tabuhan" src="Index gambar dan css/Tabuhan.jpg" width="300" height="300">
-      <p class="texttabuhan">Tabuhan</p></a>
-      <a href="Watu-Dodol.html"><img class="watudodol" src="Index gambar dan css/Watu Dodol.jpg" width="300" height="300">
-      <p class="textwatudodol">Watu Dodol</p></a>
-      <a href="Pulau-Plengkung.html"><img class="plengkung" src="Index gambar dan css/Plengkungombak.jpg" width="300" height="300">
-      <p class="textplengkung">Pulau Plengkung</p></a>
-
-
-    <div class="boxperjalanan">
-        <img class="gambar1" src="Index gambar dan css/car.png" width="120" height="150">
-        <h4 class="gambar1">Perjalanan</h4>
-        <p class="gambar1">Sangat mudah untuk mencapai tempat wisata</p>
-    </div>
-
-    <div class="boxakomodasi">
-        <img class="gambar2" src="Index gambar dan css/bed.png" width="120" height="150">
-        <h4 class="gambar2">Akomodasi</h4>
-        <p class="gambar2">Terdapat banyak pilihan untuk memilih penginapan yang sesuai dengan kenyamanan</p>
-    </div>
-
-    <div class="boxkebudayaan">
-        <img class="gambar3" src="Index gambar dan css/Dance.png" width="120" height="150">
-        <h4 class="gambar3">Kebudayaan</h4>
-        <p class="gambar3">Terdapat berbagai macam suku yang tinggal di Banyuwangi</p>
-    </div>
-
-    <div class="boxbiaya">
-        <img class="gambar4" src="Index gambar dan css/money.png" width="120" height="150">
-        <h4 class="gambar4">Biaya</h4>
-          <p class="gambar4">Biaya untuk masuk ke tempat wisata sangat terjangkau</p>
-    </div>
-
-
-    <div id="artikel">
-      Tips & Artikel
-    </div>
-
-
-    <a href="Asal-usul-banyuwangi.html"><div class="boxasal">
-        <img src="Index gambar dan css/Blog 1.jpg" width="285" height="230">
-        <div class="textasal">
-          <h4>Asal-usul Banyuwangi</h4>
-          <p>11 September 2019</p>
-        </div></a>
-    </div>
-
-    <a href="TipsWisata.html"><div class="boxtips">
-        <img src="Index gambar dan css/Blog 2.jpg" width="285" height="230">
-        <div class="texttips">
-          <h4>10 Tips Traveling untuk Mahasiswa</h4>
-          <p>11 September 2019</p>
+        <div class="search-container">
+          <form action="/more.html">
+          <input type="text" placeholder="Search.." name="search">
+          </form>
         </div>
     </div>
+    <!-- end navbar -->
 
-    <a href="WisataHemat.html"><div class="boxholiday">
-        <img src="Index gambar dan css/Blog 3.jpg" width="285" height="230">
-        <div class="textholiday">
-          <h4>7 Tips Liburan Hemat dan Menyenangkan</h4>
-          <p>11 September 2019</p>
+    <section class="judul">
+  		<div class="judul-inner">
+  			<h1>The Sunrise of Java</h1>
+  			<h2>EXPLORE THE AMAZING CITY</h2>
+  			<a class="judul-btn" href="#blog">Mulai</a>
+  		</div>
+  	</section>
+
+    <section id="blog">
+      <div class="sep-inner">
+        <h1>Dapatkan Pengalaman Terbaik</h1>
+      </div>
+      <div class="card-outer">
+        <div class="blog-card">
+          <img src="Index gambar dan css/Baluran.jpg" alt="">
+          <h3>Baluran</h3>
         </div>
-    </div>
-
-    <a href="WisataHits.html"><div class="boxwisata">
-        <img src="Index gambar dan css/Blog 4.jpg">
-        <div class="textwisata">
-          <h4>8 Tempat Wisata Banyuwangi Paling Hits</h4>
-          <p>11 September 2019</p>
+        <div class="blog-card">
+          <img src="Index gambar dan css/Bangsring.jpg" alt="">
+          <h3>Bangsring</h3>
         </div>
-    </div>
-
-
-    <div class="boxhijau">
-      <div class="textboxhijau">
-        <h2>Berlangganan kepada kami</h2>
-        <p>Klik berlangganan untuk mendapatkan berita terbaru dari kami</p>
-      </div>
-        <div class="boxlangganan">
+        <div class="blog-card">
+          <img src="Index gambar dan css/Ijen.jpg" alt="">
+          <h3>Ijen</h3>
         </div>
-    </div>
-
-    <div class="boxabu">
-      <img src="Index gambar dan css/Udeng.png">
-      <div class="fb">
-        <a href="https://facebook.com" title="Facebook"><img src="Index gambar dan css/facebook-logo.png"></a>
+        <div class="blog-card">
+          <img src="Index gambar dan css/Pulau Merah.jpg" alt="">
+          <h3>Pulau Merah</h3>
+        </div>
+        <div class="blog-card">
+          <img src="Index gambar dan css/Sadengan.jpg" alt="">
+          <h3>Sadengan</h3>
+        </div>
+        <div class="blog-card">
+          <img src="Index gambar dan css/Tabuhan.jpg" alt="">
+          <h3>Tabuhan</h3>
+        </div>
       </div>
-      <div class="twitter">
-        <a href="https://twitter.com" title="Twitter"><img src="Index gambar dan css/twitter.png"></a>
-      </div>
-      <div class="instagram">
-        <a href="https://instagram.com" title="Instagram"><img src="Index gambar dan css/instagram.png"></a>
-      </div>
+    </section>
 
-      <a href="register.html" title="Daftar"><p class="daftar">Daftar</p></a>
-      <a href="login.html" title="Masuk"><p class="masuk">Masuk</p></a>
-
-      <div id="boxgaris"></div>
-
-      <p class="bawah1">Kota Osing</p>
-      <div class="bawahsatu">
-          <ul type="none">
-            <li>Merupakan web yang</li>
-            <li>berisi tentang wisata yang</li>
-            <li>berada di kota Banyuwangi</li>
-          </ul>
+    <section id="paket">
+  		<div class="paket-card">
+        <img class="box"src="Index gambar dan css/car.png" alt="">
+  			<h1>Perjalanan</h1>
+  			<p>Sangat mudah untuk mencapai tempat wisata</p>
+  		</div>
+  		<div class="paket-card">
+        <img class="box" src="Index gambar dan css/bed.png" alt="">
+        <h1>Akomodasi</h1>
+  			<p>Banyak pilihan untuk memilih penginapan yang sesuai dengan kenyamanan</p>
+  		</div>
+  		<div class="paket-card">
+        <img class="box" src="Index gambar dan css/Dance.png" alt="">
+  			<h1>Kebudayaan</h1>
+  			<p>Terdapat berbagai macam suku yang tinggal di Banyuwangi</p>
+  		</div>
+      <div class="paket-card">
+        <img class="box" src="Index gambar dan css/money.png" alt="">
+        <h1>Biaya</h1>
+        <p>Biaya untuk masuk ke tempat wisata sangat terjangkau</p>
       </div>
+  	</section>
 
-      <p class="bawah2">Information</p>
-      <div class="bawahdua">
-          <ul type="none">
-            <li>Dandy Satrio Wibowo</li>
-            <br>
-            <li>Fitria Rahmawati</li>
-            <br>
-            <li>Dewi Chantika Maya</li>
-            <br>
-          </ul>
-      </div>
 
-      <p class="bawah3">Have a Question?</p>
-      <div class="gambarbawah3">
-        <ul type="none">
-          <li> <img src="Index gambar dan css/Location.png"> </li> <br>
-          <li> <img src="Index gambar dan css/Phone.png"> </li>
-          <li> <img src="Index gambar dan css/Gmail.png" > </li>
-        </ul>
+    <section id="saran">
+  		<div class="saran-card">
+        <img class="saran"src="Index gambar dan css/Blog 1.jpg" alt="">
+  			<h1>Asal-usul Kota Banyuwangi</h1>
+  			<p>11 September 2019</p>
+  		</div>
+  		<div class="saran-card">
+        <img class="saran" src="Index gambar dan css/Blog 3.jpg" alt="">
+        <h1>7 Tips Liburan Hemat dan Menyenangkan</h1>
+  			<p>11 September 2019</p>
+  		</div>
+      <div class="saran-card">
+        <img class="saran" src="Index gambar dan css/Blog 4.jpg" alt="">
+        <h1>8 Tempat Wisata Banyuwangi Paling Hits</h1>
+        <p>11 September 2019</p>
       </div>
-      <div class="bawahtiga">
-          <ul type="none">
-            <li>Jalan Argopuro V no.183,</li>
-            <li>Banyuwangi, Jawa Timur,</li>
-            <li>Indonesia</li>
-            <br>
-            <li>+62 812 3456 7890</li>
-            <br>
-            <li>info@kotaosing.com</li>
-            <br>
-          </ul>
-      </div>
+  	</section>
 
+<!--
+    <section id="praFooter">
+  		<p>
+  			JatimBagus Adalah Web Informasi Pariwisata dan menyediakan tour.
+  		</p>
+  	</section> -->
+
+
+
+    <footer>
+      &#169; Kota Osing 2019
+  	</footer>
   </body>
 </html>
