Tinggal ajax dkk

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Kota Osing</title>
+    <title>KOTA OSING - The Sunrise of Java</title>
     <link rel="icon" type="image/png" href="Index gambar dan css/Udeng-black.png">
     <link rel="stylesheet" href="Index gambar dan css/index.css">
   </head>
@@ -36,27 +36,27 @@
       </div>
       <div class="card-outer">
         <div class="blog-card">
-          <img src="Index gambar dan css/Baluran.jpg" alt="">
+          <a href="Taman-Baluran.html"><img src="Index gambar dan css/Baluran.jpg" ></a>
           <h3>Baluran</h3>
         </div>
         <div class="blog-card">
-          <img src="Index gambar dan css/Bangsring.jpg" alt="">
+          <a href="Bangsring-Water.html"><img src="Index gambar dan css/Bangsring.jpg" alt=""></a>
           <h3>Bangsring</h3>
         </div>
         <div class="blog-card">
-          <img src="Index gambar dan css/Ijen.jpg" alt="">
+          <a href="Bangsring-Water.html"><img src="Index gambar dan css/Ijen.jpg" alt=""></a>
           <h3>Ijen</h3>
         </div>
         <div class="blog-card">
-          <img src="Index gambar dan css/Pulau Merah.jpg" alt="">
+          <a href="Kawah-Ijen.html"><img src="Index gambar dan css/Pulau Merah.jpg" alt=""></a>
           <h3>Pulau Merah</h3>
         </div>
         <div class="blog-card">
-          <img src="Index gambar dan css/Sadengan.jpg" alt="">
+          <a href="Sadengan.html"><img src="Index gambar dan css/Sadengan.jpg" alt=""></a>
           <h3>Sadengan</h3>
         </div>
         <div class="blog-card">
-          <img src="Index gambar dan css/Tabuhan.jpg" alt="">
+          <a href="Pulau-Tabuhan.html"><img src="Index gambar dan css/Tabuhan.jpg" alt=""></a>
           <h3>Tabuhan</h3>
         </div>
       </div>
@@ -103,15 +103,6 @@
         <p>11 September 2019</p>
       </div>
   	</section>
-
-<!--
-    <section id="praFooter">
-  		<p>
-  			JatimBagus Adalah Web Informasi Pariwisata dan menyediakan tour.
-  		</p>
-  	</section> -->
-
-
 
     <footer>
       &#169; Kota Osing 2019
