--- a/Kawah-Ijen.html
+++ b/Kawah-Ijen.html
@@ -1,58 +1,60 @@
-<!doctype html>
-<html>
-<head>
-<title>KOTA OSING - The Sunrise of Java</title>
-<link rel="icon" type="image/png" href="Index gambar dan css/Udeng-black.png">
-<link rel="stylesheet" href="Index gambar dan css/style.css">
-</head>
-<body>
-	<div id="header-menu">
-			<img id="header-logo" src="Index gambar dan css/Kota Osing-black.png">
-			<ul>
-				<li><a href="index.html#boxgaris">KONTAK</a></li>
-				<li><a href="index.html#artikel">BLOG</a></li>
-				<li><a href="tentang.html">TENTANG</a></li>
-				<li><a href="index.html">BERANDA</a></li>
-			</ul>
-	</div>
-	<div class="headerGambar">
-		<img class="headerGambar" src="Index gambar dan css/Ijen.png">
-	</div>
-<br>
-<div class="sosmed">
-			<img class="view" src="Index gambar dan css/view.png">
-			<img class="love" src="Index gambar dan css/love.png">
-			<img class="share" src="Index gambar dan css/share.png">
-			<p class="tulisanview">5,263 kali dilihat</p>
-			<p class="tulisanlove">4,827 kali disukai</p>
-			<p class="tulisanshare">7,936 kali dibagikan</p>
-</div>
-<div class="wisata">
-	<h3 class="judulwisata"><b>KAWAH IJEN</b></h3>
-	<p><b>Kawah Ijen adalah salah satu gunung yang masih aktif sampai sekarang. Memiliki ketinggian 2.443 m dari atas permukaan laut, berdinding kaldera setinggi 300-500 m dan telah 4 kali meletus di tahun 1796, 1817, 1913 dan 1936. Ijen merupakan satu komplek gunung berapi yang terdiri dari kawah gunung Ijen dan dataran tingginya. Kawasan ini terletak di tiga kabupaten yaitu Situbondo, Bondowoso dan Banyuwangi. Kawah Ijen merupakan pusat danau kawah terbesar di dunia, yang bisa memproduksi 3 juta meter kubik belerang dan hidrogen klorida dengan luas sekitar 5.466 hektar. Kawah yang berbahaya ini memiliki keindahan yang sangat luar biasa dengan danau belerang berwarna hijau toska dengan sentuhan dramatis dan elok. Danau Ijen memiliki derajat keasaman nol dan memiliki kedalaman 200 meter. Keasamannya yang sangat kuat dapat melarutkan pakaian dan jari manusia. Bagi mereka yang suka akan petualangan, untuk mencapai Gunung Ijen bisa di akses dari dua arah yaitu, dari utara dan dari selatan. <br> Dari utara, bisa di tempuh melalui Situbondo menuju Sempol (Bondowoso) lewat Wonosari dan dilajutkan ke Paltuding. Jaral Situbondo ke Paltuding sekitar 93 Km dan dapat ditemput sekitar 2,5 jam. Dari arah selatan, bisa dilalui dari Banyuwangi menuju Licin yang berjarak 15 Km. Dari Licin menuju Paltuding berjarak 18 Km dan diteruskan menggunakan Jeep atau mobil berat lainnya sekitar 6 Km sebelum ke Paltuding. Ini dikarenakan jalan yang berkelok dan menanjak.</b></p>
-</div>
-<div class="gambarWisata">
-	<img class="wisata1"src="Index gambar dan css/Ijen-1.jpg" >
-	<img class="wisata2"src="Index gambar dan css/Ijen-2.jpg">
-</div>
-	<center><img class="garis" src="Index gambar dan css/garis.png"></center>
-	<h4 class="disarankan">Disarankan untuk Anda</h4>
-	<div class="saran">
-		<img class="saran1" src="Index gambar dan css/Suggest 1.png"></img>
-				<p class="textsaran1">4 Hal di Banyuwangi yang Membuat Liburanmu Tidak Terlupakan</p>
-					<img class="saran2" src="Index gambar dan css/Suggest 2.png"></img>
-				<p class="textsaran2">Telemung: Tempat Di mana Warisan ada di Banyuwangi</p>
-			<img class="saran3" src="Index gambar dan css/Suggest 3.png"></img>
-		<p class="textsaran3">7 Pantai Tersembunyi di Banyuwangi yang Akan Membuatmu Berkesan</p>
-	</div>
-	<div class="footertop">
-	</div>
-	<div class="bottomnav">
-			<div class="footerkanan">
-				<a class="facebook" href="https://www.facebook.com/" target="_blank" rel="nofollow" title="Facebook"><img class="facebook" src="Index gambar dan css/Group 26.png" width="50" height="50"></a>
-				<a class="twitter" href="https://twitter.com/" target="_blank" rel="nofollow" title="Twitter"><img class="twitter" src="Index gambar dan css/Group 27.png" width="50" height="50"></a>
-				<a class="instageam" href="https://instagram.com/" target="_blank" rel="nofollow" title="Instagram"><img class="instagram" src="Index gambar dan css/Group 28.png" width="50" height="50"></a>
-			</div>
-	</div>
-</body>
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title>KOTA OSING - The Sunrise of Java</title>
+    <link rel="icon" type="image/png" href="Index gambar dan css/Udeng-black.png">
+    <link rel="stylesheet" href="Index gambar dan css/index.css">
+  </head>
+  <body>
+    <!-- navbar -->
+    <div class="topnav">
+        <a href="index.html">KOTA OSING</a>
+        <a style="float:right" href="#">Tentang</a>
+        <a style="float:right" href="#">Daftar</a>
+        <a style="float:right" href="form.html">Masuk</a>
+
+        <div class="search-container">
+          <form action="/more.html">
+          <input type="text" placeholder="Search.." name="search">
+          </form>
+          </div>
+    </div>
+
+
+    <!-- end navbar -->
+
+        <section id="artikel">
+          <div class="wisata">
+            <img src="Index gambar dan css/Ijen.png">
+            <h1>KAWAH IJEN</h1>
+          </div>
+          <div class="abovewisata">
+          <a>&#9829; 1200 disukai</a>
+          <a>&#8594; 2500 dilihat </a>
+          </div>
+          <p class="ijen"><b>Kawah Ijen adalah salah satu gunung yang masih aktif sampai sekarang. Memiliki ketinggian 2.443 m dari atas permukaan laut, berdinding kaldera setinggi 300-500 m dan telah 4 kali meletus di tahun 1796, 1817, 1913 dan 1936. Ijen merupakan satu komplek gunung berapi yang terdiri dari kawah gunung Ijen dan dataran tingginya. Kawasan ini terletak di tiga kabupaten yaitu Situbondo, Bondowoso dan Banyuwangi. Kawah Ijen merupakan pusat danau kawah terbesar di dunia, yang bisa memproduksi 3 juta meter kubik belerang dan hidrogen klorida dengan luas sekitar 5.466 hektar. Kawah yang berbahaya ini memiliki keindahan yang sangat luar biasa dengan danau belerang berwarna hijau toska dengan sentuhan dramatis dan elok. Danau Ijen memiliki derajat keasaman nol dan memiliki kedalaman 200 meter. Bagi mereka yang suka akan petualangan, untuk mencapai Gunung Ijen bisa di akses dari dua arah yaitu, dari utara dan dari selatan. Dari utara, bisa di tempuh melalui Situbondo menuju Sempol (Bondowoso) lewat Wonosari dan dilajutkan ke Paltuding. Jaral Situbondo ke Paltuding sekitar 93 Km dan dapat ditemput sekitar 2,5 jam. Dari arah selatan, bisa dilalui dari Banyuwangi menuju Licin yang berjarak 15 Km. Dari Licin menuju Paltuding berjarak 18 Km dan diteruskan menggunakan Jeep atau mobil berat lainnya sekitar 6 Km sebelum ke Paltuding. Ini dikarenakan jalan yang berkelok dan menanjak.<b><p>
+            <div class="gambarwisata">
+              <a><img src="Index gambar dan css/Ijen1.jpg" alt=""></a>
+              <a><img src="Index gambar dan css/Ijen2.jpg" alt=""></a>
+            </div>
+        </section>
+        <p class="saran">Disarankan untuk anda</p>
+        <section id="saranwisata">
+          <div class="saran-card">
+            <img class="saran"src="Index gambar dan css/Suggest 1.png" alt="">
+      			<p>4 Hal di Banyuwangi yang Membuat Liburanmu Tidak Terlupakan</p>
+      		</div>
+      		<div class="saran-card">
+            <img class="saran" src="Index gambar dan css/Suggest 2.png" alt="">
+            <p>Telemung: Tempat Di mana Warisan ada di Banyuwangi</p>
+      		</div>
+          <div class="saran-card">
+            <img class="saran" src="Index gambar dan css/Suggest 3.png" alt="">
+            <p>7 Pantai Tersembunyi di Banyuwangi yang Akan Membuatmu Berkesan</p>
+      	</section>
+        <footer>
+          &#169; Kota Osing 2019
+        </footer>
+  </body>
 </html>
