--- a/Pulau-Tabuhan.html
+++ b/Pulau-Tabuhan.html
@@ -1,57 +1,61 @@
-<!doctype html>
-<html>
-<head>
-<title>KOTA OSING - The Sunrise of Java</title>
-<link rel="icon" type="image/png" href="Index gambar dan css/Udeng-black.png">
-<link rel="stylesheet" href="Index gambar dan css/style.css">
-</head>
-<body>
-	<div id="header-menu">
-			<img id="header-logo" src="Index gambar dan css/Kota Osing-black.png">
-			<ul>
-				<li><a href="index.html#boxgaris">KONTAK</a></li>
-				<li><a href="index.html#artikel">BLOG</a></li>
-				<li><a href="tentang.html">TENTANG</a></li>
-				<li><a href="index.html">BERANDA</a></li>
-			</ul>
-	</div>
-	<div class="headerGambar">
-		<img class="headerGambar" src="Index gambar dan css/Tabuhan2.jpg" width="100" height="150">
-	</div>
-<br>
-<div class="sosmed">
-			<img class="view" src="Index gambar dan css/view.png">
-			<img class="love" src="Index gambar dan css/love.png">
-			<img class="share" src="Index gambar dan css/share.png">
-			<p class="tulisanview">5,263 kali dilihat</p>
-			<p class="tulisanlove">4,827 kali disukai</p>
-			<p class="tulisanshare">7,936 kali dibagikan</p>
-</div>
-<div class="wisata">
-	<h3 class="judulwisata"><b>Pulau Tabuhan</b></h3>
-	<p><b>Ada asal-usul mengapa pulau ini dinamakan Pulau Tabuhan. Sebab, angin laut yang berhembus pada sekitar pulau ini lumayan kencang. Sehingga jika didengarkan dengan seksama, angin yang bergerak akan terdengar mendesis di telinga. Tabuhan berasal dari kata tabuh yang memiliki arti sama dengan memukul. Namun, kata tabuh di sini cenderung pada pukulan terhadap alat musik. Karena suara angin itulah, pulau ini dinamakan Pulau Tabuhan. Yaitu pulau yang terdapat bunyi-bunyian atau tabuhan. Pulau Tabuhan ini termasuk pulau yang masih alami. Tidak banyak fasilitas yang disediakan. Hanya ada satu tempat berjualan makanan yang jika tidak dibuka, maka tempat ini menjadi satu-satunya tempat yang bisa Anda jadikan tempat berlindung dan beristirahat. Letak Pulau Tabuhan Wongsorejo Banyuwangi yang berada pada dua puluh kilometer dari kota Banyuwangi, membuat para pengunjung harus mencapai Pulau Tabuhan dengan kapal laut. Biaya yang relatif mahal akan terasa ringan jika Anda datang serombongan bersama teman-teman Anda. Aktifitas seru yang bisa dilakukan di pulau ini seperti Snorkeling. Ombak di lokasi Pulau Tabuhan bwi sebelah utara agak tenang, biasanya pengunjung melakukan snorkeling di daerah ini. Air yang berwarna hijau kebiru-biruan serta jernih ini akan semakin menggoda Anda untuk segera terjun ke air dan menikmati asyiknya bercengkerama dengan ikan-ikan kecil yang berenang bebas di perairan ini. Banyak pula jenis terumbu karang dan hewan-hewan laut yang tampak. Anda bisa juga melakukan diving di tempat ini. Asalkan ada instruktur yang mendampingi Anda. </b></p></div>
-<div class="gambarWisata">
-	<img class="wisata1"src="Index gambar dan css/Tabuhan.jpg" >
-	<img class="wisata2"src="Index gambar dan css/Tabuhan1.jpg">
-</div>
-	<center><img class="garis" src="Index gambar dan css/garis.png"></center>
-	<h4 class="disarankan">Disarankan untuk Anda</h4>
-	<div class="saran">
-		<img class="saran1" src="Index gambar dan css/Suggest 1.png"></img>
-				<p class="textsaran1">4 Hal di Banyuwangi yang Membuat Liburanmu Tidak Terlupakan</p>
-					<img class="saran2" src="Index gambar dan css/Suggest 2.png"></img>
-				<p class="textsaran2">Telemung: Tempat Di mana Warisan ada di Banyuwangi</p>
-			<img class="saran3" src="Index gambar dan css/Suggest 3.png"></img>
-		<p class="textsaran3">7 Pantai Tersembunyi di Banyuwangi yang Akan Membuatmu Berkesan</p>
-	</div>
-	<div class="footertop">
-	</div>
-	<div class="bottomnav">
-			<div class="footerkanan">
-				<a class="facebook" href="https://www.facebook.com/" target="_blank" rel="nofollow" title="Facebook"><img class="facebook" src="Index gambar dan css/Group 26.png" width="50" height="50"></a>
-				<a class="twitter" href="https://twitter.com/" target="_blank" rel="nofollow" title="Twitter"><img class="twitter" src="Index gambar dan css/Group 27.png" width="50" height="50"></a>
-				<a class="instagram" href="https://instagram.com/" target="_blank" rel="nofollow" title="Instagram"><img class="instagram" src="Index gambar dan css/Group 28.png" width="50" height="50"></a>
-			</div>
-	</div>
-</body>
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title>KOTA OSING - The Sunrise of Java</title>
+    <link rel="icon" type="image/png" href="Index gambar dan css/Udeng-black.png">
+    <link rel="stylesheet" href="Index gambar dan css/index.css">
+  </head>
+  <body>
+    <!-- navbar -->
+    <div class="topnav">
+        <a href="index.html">KOTA OSING</a>
+        <a style="float:right" href="#">Tentang</a>
+        <a style="float:right" href="#">Daftar</a>
+        <a style="float:right" href="form.html">Masuk</a>
+
+        <div class="search-container">
+          <form action="/more.html">
+          <input type="text" placeholder="Search.." name="search">
+          </form>
+          </div>
+    </div>
+
+
+    <!-- end navbar -->
+
+        <section id="artikel">
+          <div class="wisata">
+            <img src="Index gambar dan css/Tabuhan.jpg">
+            <h1>TABUHAN</h1>
+          </div>
+          <div class="abovewisata">
+          <a>&#9829; 1200 disukai</a>
+          <a>&#8594; 2500 dilihat </a>
+          </div>
+          <p class="ijen"><b>Ada asal-usul mengapa pulau ini dinamakan Pulau Tabuhan. Sebab, angin laut yang berhembus pada sekitar pulau ini lumayan kencang. Sehingga jika didengarkan dengan seksama, angin yang bergerak akan terdengar mendesis di telinga. Tabuhan berasal dari kata tabuh yang memiliki arti sama dengan memukul. Namun, kata tabuh di sini cenderung pada pukulan terhadap alat musik. Karena suara angin itulah, pulau ini dinamakan Pulau Tabuhan. Yaitu pulau yang terdapat bunyi-bunyian atau tabuhan. Pulau Tabuhan ini termasuk pulau yang masih alami. Tidak banyak fasilitas yang disediakan. Hanya ada satu tempat berjualan makanan yang jika tidak dibuka, maka tempat ini menjadi satu-satunya tempat yang bisa Anda jadikan tempat berlindung dan beristirahat. Letak Pulau Tabuhan Wongsorejo Banyuwangi yang berada pada dua puluh kilometer dari kota Banyuwangi, membuat para pengunjung harus mencapai Pulau Tabuhan dengan kapal laut. Biaya yang relatif mahal akan terasa ringan jika Anda datang serombongan bersama teman-teman Anda. Aktifitas seru yang bisa dilakukan di pulau ini seperti Snorkeling. Ombak di lokasi Pulau Tabuhan bwi sebelah utara agak tenang, biasanya pengunjung melakukan snorkeling di daerah ini. Air yang berwarna hijau kebiru-biruan serta jernih ini akan semakin menggoda Anda untuk segera terjun ke air dan menikmati asyiknya bercengkerama dengan ikan-ikan kecil yang berenang bebas di perairan ini. Banyak pula jenis terumbu karang dan hewan-hewan laut yang tampak. Anda bisa juga melakukan diving di tempat ini. Asalkan ada instruktur yang mendampingi Anda.  <b><p>
+            <div class="gambarwisata">
+              <a><img src="Index gambar dan css/Tabuhan1.jpg" alt=""></a>
+              <a><img src="Index gambar dan css/Tabuhan2.jpg" alt=""></a>
+            </div>
+        </section>
+        <p class="saran">Disarankan untuk anda</p>
+        <section id="saranwisata">
+          <div class="saran-card">
+            <img class="saran"src="Index gambar dan css/Suggest 1.png" alt="">
+            <p>4 Hal di Banyuwangi yang Membuat Liburanmu Tidak Terlupaka</p>
+          </div>
+          <div class="saran-card">
+            <img class="saran" src="Index gambar dan css/Suggest 2.png" alt="">
+            <p>Telemung: Tempat Di mana Warisan ada di Banyuwangi</p>
+          </div>
+          <div class="saran-card">
+            <img class="saran" src="Index gambar dan css/Suggest 3.png" alt="">
+            <p>7 Pantai Tersembunyi di Banyuwangi yang Akan Membuatmu Berkesan</p>
+          </div>
+      	</section>
+        <footer>
+          &#169; Kota Osing 2019
+        </footer>
+  </body>
 </html>
