--- a/Taman-Baluran.html
+++ b/Taman-Baluran.html
@@ -1,58 +1,61 @@
-<!doctype html>
-<html>
-<head>
-<title>KOTA OSING - The Sunrise of Java</title>
-<link rel="icon" type="image/png" href="Index gambar dan css/Udeng-black.png">
-<link rel="stylesheet" href="Index gambar dan css/style.css">
-</head>
-<body>
-	<div id="header-menu">
-			<img id="header-logo" src="Index gambar dan css/Kota Osing-black.png">
-			<ul>
-				<li><a href="index.html#boxgaris">KONTAK</a></li>
-				<li><a href="index.html#artikel">BLOG</a></li>
-				<li><a href="tentang.html">TENTANG</a></li>
-				<li><a href="index.html">BERANDA</a></li>
-			</ul>
-	</div>
-	<div class="headerGambar">
-		<img class="headerGambar" src="Index gambar dan css/Baluran.jpg">
-	</div>
-<br>
-<div class="sosmed">
-			<img class="view" src="Index gambar dan css/view.png">
-			<img class="love" src="Index gambar dan css/love.png">
-			<img class="share" src="Index gambar dan css/share.png">
-			<p class="tulisanview">5,263 kali dilihat</p>
-			<p class="tulisanlove">4,827 kali disukai</p>
-			<p class="tulisanshare">7,936 kali dibagikan</p>
-</div>
-<div class="wisata">
-	<h3 class="judulwisata"><b>Taman Nasional Baluran</b></h3>
-	<p><b>Taman Nasional Baluran adalah salah satu Taman Nasional di Indonesia yang terletak di antara wilayah Wongsorejo, Banyuwangi dan Banyuputih, Situbondo, Jawa Timur, Indonesia. Nama dari Taman Nasional ini diambil dari nama gunung yang berada di daerah ini, yaitu Gunung Baluran. Gerbang untuk masuk ke Taman Nasional Baluran berada di 7°55'17.76"S dan 114°23'15.27"E. Taman nasional ini terdiri dari tipe vegetasi sabana, hutan mangrove, hutan musim, hutan pantai, hutan pegunungan bawah, hutan rawa dan hutan yang selalu hijau sepanjang tahun. Tipe vegetasi sabana mendominasi kawasan Taman Nasional Baluran yakni sekitar 40 persen dari total luas lahan. Sebelum tahun 1928 AH. Loedeboer, seorang pemburu kebangsaan Belanda yang memiliki daerah Konsesi perkebunan di Labuhan Merak dan Gunung Mesigit, pernah singgah di Baluran. Dia telah menaruh perhatian dan meyakini bahwa Baluran mempunyai nilai penting untuk perlindungan satwa, khususnya jenis mamalia besar. Pada tahun 1930 KW. Dammerman yang menjabat sebagai Direktur Kebun Raya Bogor mengusulkan perlunya Baluran ditunjuk sebagai hutan lindung. Pada tahun 1937 Gubernur Jenderal Hindia Belanda menetapkan Baluran sebagai Suaka Margasatwa dengan ketetapan GB. No. 9 tanggal 25 September 1937 Stbl. 1937 No. 544. Pada masa pasca kemerdekaan, Baluran ditetapkan kembali sebagai Suaka Margasatwa oleh Menteri Pertanian dan Agraria Republik Indonesia dengan Surat Keputusan Nomor. SK/II/1962 tanggal 11 Mei 1962. Pada tanggal 6 Maret 1980, bertepatan dengan hari Strategi Pelestarian se-Dunia, Suaka Margasatwa Baluran oleh menteri Pertanian diumumkan sebagai Taman Nasional.<b></p>
-</div>
-<div class="gambarWisata">
-	<img class="wisata1"src="Index gambar dan css/Baluran2.jpg" >
-	<img class="wisata2"src="Index gambar dan css/Baluran3.jpg">
-</div>
-	<center><img class="garis" src="Index gambar dan css/garis.png"></center>
-	<h4 class="disarankan">Disarankan untuk Anda</h4>
-	<div class="saran">
-		<img class="saran1baluran" src="Index gambar dan css/Suggest 1.png"></img>
-				<p class="textsaran1baluran">4 Hal di Banyuwangi yang Membuat Liburanmu Tidak Terlupakan</p>
-					<img class="saran2baluran" src="Index gambar dan css/Suggest 2.png"></img>
-				<p class="textsaran2baluran">Telemung: Tempat Di mana Warisan ada di Banyuwangi</p>
-			<img class="saran3baluran" src="Index gambar dan css/Suggest 3.png"></img>
-		<p class="textsaran3baluran">7 Pantai Tersembunyi di Banyuwangi yang Akan Membuatmu Berkesan</p>
-	</div>
-	<div class="footertop">
-	</div>
-	<div class="bottomnav">
-			<div class="footerkanan">
-        <a class="facebook" href="https://www.facebook.com/" target="_blank" rel="nofollow" title="Facebook"><img class="facebook" src="Index gambar dan css/Group 26.png" width="50" height="50"></a>
-  			<a class="twitter" href="https://twitter.com/" target="_blank" rel="nofollow" title="Twitter"><img class="twitter" src="Index gambar dan css/Group 27.png" width="50" height="50"></a>
-  			<a class="instagram" href="https://instagram.com/" target="_blank" rel="nofollow" title="Instagram"><img class="instagram" src="Index gambar dan css/Group 28.png" width="50" height="50"></a>
-  		</div>
-	</div>
-</body>
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title>KOTA OSING - The Sunrise of Java</title>
+    <link rel="icon" type="image/png" href="Index gambar dan css/Udeng-black.png">
+    <link rel="stylesheet" href="Index gambar dan css/index.css">
+  </head>
+  <body>
+    <!-- navbar -->
+    <div class="topnav">
+        <a href="index.html">KOTA OSING</a>
+        <a style="float:right" href="#">Tentang</a>
+        <a style="float:right" href="#">Daftar</a>
+        <a style="float:right" href="form.html">Masuk</a>
+
+        <div class="search-container">
+          <form action="/more.html">
+          <input type="text" placeholder="Search.." name="search">
+          </form>
+          </div>
+    </div>
+
+
+    <!-- end navbar -->
+
+        <section id="artikel">
+          <div class="wisata">
+            <img src="Index gambar dan css/Baluran.jpg">
+            <h1>TAMAN NASIONAL BALURAN</h1>
+          </div>
+          <div class="abovewisata">
+          <a>&#9829; 1200 disukai</a>
+          <a>&#8594; 2500 dilihat </a>
+          </div>
+          <p class="ijen"><b>aman Nasional Baluran adalah salah satu Taman Nasional di Indonesia yang terletak di antara wilayah Wongsorejo, Banyuwangi dan Banyuputih, Situbondo, Jawa Timur, Indonesia. Nama dari Taman Nasional ini diambil dari nama gunung yang berada di daerah ini, yaitu Gunung Baluran. Gerbang untuk masuk ke Taman Nasional Baluran berada di 7°55'17.76"S dan 114°23'15.27"E. Taman nasional ini terdiri dari tipe vegetasi sabana, hutan mangrove, hutan musim, hutan pantai, hutan pegunungan bawah, hutan rawa dan hutan yang selalu hijau sepanjang tahun. Tipe vegetasi sabana mendominasi kawasan Taman Nasional Baluran yakni sekitar 40 persen dari total luas lahan. Sebelum tahun 1928 AH. Loedeboer, seorang pemburu kebangsaan Belanda yang memiliki daerah Konsesi perkebunan di Labuhan Merak dan Gunung Mesigit, pernah singgah di Baluran. Dia telah menaruh perhatian dan meyakini bahwa Baluran mempunyai nilai penting untuk perlindungan satwa, khususnya jenis mamalia besar. Pada tahun 1930 KW. Dammerman yang menjabat sebagai Direktur Kebun Raya Bogor mengusulkan perlunya Baluran ditunjuk sebagai hutan lindung. Pada tahun 1937 Gubernur Jenderal Hindia Belanda menetapkan Baluran sebagai Suaka Margasatwa dengan ketetapan GB. No. 9 tanggal 25 September 1937 Stbl. 1937 No. 544. Pada masa pasca kemerdekaan, Baluran ditetapkan kembali sebagai Suaka Margasatwa oleh Menteri Pertanian dan Agraria Republik Indonesia dengan Surat Keputusan Nomor. SK/II/1962 tanggal 11 Mei 1962. Pada tanggal 6 Maret 1980, bertepatan dengan hari Strategi Pelestarian se-Dunia, Suaka Margasatwa Baluran oleh menteri Pertanian diumumkan sebagai Taman Nasional.<b><p>
+            <div class="gambarwisata">
+              <a><img src="Index gambar dan css/Baluran2.jpg" alt=""></a>
+              <a><img src="Index gambar dan css/Baluran3.jpg" alt=""></a>
+            </div>
+        </section>
+        <p class="saran">Disarankan untuk anda</p>
+        <section id="saranwisata">
+          <div class="saran-card">
+            <img class="saran"src="Index gambar dan css/Suggest 1.png" alt="">
+            <p>4 Hal di Banyuwangi yang Membuat Liburanmu Tidak Terlupaka</p>
+          </div>
+          <div class="saran-card">
+            <img class="saran" src="Index gambar dan css/Suggest 2.png" alt="">
+            <p>Telemung: Tempat Di mana Warisan ada di Banyuwangi</p>
+          </div>
+          <div class="saran-card">
+            <img class="saran" src="Index gambar dan css/Suggest 3.png" alt="">
+            <p>7 Pantai Tersembunyi di Banyuwangi yang Akan Membuatmu Berkesan</p>
+          </div>
+      	</section>
+        <footer>
+          &#169; Kota Osing 2019
+        </footer>
+  </body>
 </html>
